# pir-ss20-homeworks-grp2

./: .gitignore  Cargo.toml  README.md  readme.md  test.md
.github/workflows/: rust.yml
exercises/: main.rs
exercises/chapter4/: Aufgaben_Kapitel4.txt  Task1_2.rs  Task2.rs  Task3.rs  Task4.rs  Task5.rs
exercises/chapter5/: Tasks.md  main.rs  main_skeleton.rs  readme.md
exercises/chapter5/presentation/: part1.rs  part2.rs
exercises/chapter6/: Task.rs
