[package]
name = "pir-ss20-homeworks-grp2"
version = "0.1.0"
authors = ["Sebastian <37550703+se7dev@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "exercises/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

