[package]
name = "pir-ss20-homeworks-grp2"
version = "0.1.0"
authors = ["Sebastian <37550703+se7dev@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "chapter5_main_rs"
path = "exercises/chapter5/main_skeleton.rs"

[[bin]]
name = "chapter4_task1_1"
path = "exercises/chapter4//Task1_1.rs"

[[bin]]
name = "chapter4_task1_2"
path = "exercises/chapter4/Task1_2.rs"

[[bin]]
name = "chapter4_task1_3"
path = "exercises/chapter4/Task1_3.rs"

[[bin]]
name = "chapter4_task2"
path = "exercises/chapter4/Task2.rs"

[[bin]]
name = "chapter4_task3"
path = "exercises/chapter4/Task3.rs"

[[bin]]
name = "chapter4_task4"
path = "exercises/chapter4/Task4.rs"

[[bin]]
name = "chapter4_task5"
path = "exercises/chapter4/Task5.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

